--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -63,7 +63,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    display: none; /* скрыта по умолчанию */
+    display: none;
     justify-content: center;
     align-items: center;
     background: rgba(0,0,0,0.8);
@@ -73,6 +73,7 @@
 
 .portfolio-modal.open {
     display: flex;
+    flex-direction: column;
 }
 
 .modal-overlay {
@@ -154,4 +155,21 @@
     position: absolute;
     inset: 0;
     cursor: pointer;
+}
+
+.portfolio-close-wrapper {
+    display: flex;
+    width: clamp(90vw, 80vw, 95vw);
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.portfolio-modal-close {
+    font-size: clamp(40px, 4vw, 50px);
+    background: none;
+    border: none;
+    cursor: pointer;
+    color: #FFFFFF;
+    padding-right: clamp(0, 1vw, 3vw);
+    
 }
